bk_ida/gccida/c3/find_comparison_args
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3587:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  find_comparison_args( 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3588:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3591:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode1, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3592:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *pmode2) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3617:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v28; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3619:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v31; // [rsp+10h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3620:6: error: use of undeclared identifier 'v32'
rtx *v32; // [rsp+18h] [rbp-50h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3668:25: error: use of undeclared identifier 'machine_mode'
v15 = canon_hash( v7, ( machine_mode)v10); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3694:1: error: use of undeclared identifier 'v32'
v32 = v6; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3701:6: error: use of undeclared identifier 'v32'
v6 = v32; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3726:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v21] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3731:16: error: expected expression
parg2 = ( rtx *)0xFFFFFFFFLL; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3744:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned int)v21] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3749:16: error: expected expression
parg2 = ( rtx *)0xFFFFFFFFLL; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3758:6: error: use of undeclared identifier 'v32'
v6 = v32; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3800:6: error: use of undeclared identifier 'v32'
v6 = v32; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3805:58: error: too many arguments to function call, expected 2, have 4
v28 = ( unsigned int)reversed_comparison_code( exp, 0LL, ( __int64)parg2, (  struct rtx_def *)v11); 
                     ~~~~~~~~~~~~~~~~~~~~~~~~            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/rtl.h:1817:1: note: 'reversed_comparison_code' declared here
extern enum rtx_code reversed_comparison_code PARAMS ((rtx, rtx));
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/cse.c:3811:12: error: expected ';' after expression
v8 = ( rtx)exp[1]; 
           ^
           ;
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/find_comparison_args/src/obj/cse.o] Error 1
